[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/hud/hp_bars/boss_health_progress.png" type="Texture" id=1]
[ext_resource path="res://assets/hud/hp_bars/boss_health_under.png" type="Texture" id=2]
[ext_resource path="res://assets/bosses/chonk/chonk_2.png" type="Texture" id=3]
[ext_resource path="res://scripts/boss/BOSS_Chonk.gd" type="Script" id=4]
[ext_resource path="res://assets/roboto_mono_regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://audio/boss_kill.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/bosses/chonk/chonk_1.png" type="Texture" id=7]
[ext_resource path="res://assets/bosses/chonk/chonk_3.png" type="Texture" id=8]
[ext_resource path="res://assets/bosses/chonk/chonk_dead.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "phase1",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "phase2",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "phase3",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 192, 192 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2.46229, 0.241484 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 0, 0 ) ]
}

[node name="ChonkBoss" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ChonkHealth" type="CanvasLayer" parent="."]

[node name="HealthBar" type="TextureProgress" parent="ChonkHealth"]
margin_left = 397.0
margin_top = 12.0
margin_right = 897.0
margin_bottom = 52.0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="ChonkHealth"]
margin_left = 606.0
margin_top = 48.0
margin_right = 681.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "CHONK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 3 )

[node name="Death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 3.029
